<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/btnCpuMemMonitor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/cpuMemMonitor"/>
    
    <Button 
        android:id="@+id/btnBatterMonitor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/batterMonitor"/>
    
    <Button 
        android:id="@+id/btnIOMonitor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/iowMonitor"/>
    
    <Button 
        android:id="@+id/btnNetMonitor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/netMonitor"/>

    <TextView 
        android:id="@+id/userDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/userDescription"/>
    

</LinearLayout>
