<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        
    <ListView  
         android:id="@android:id/list"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="9"/>
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:gravity="center_horizontal"
    	android:orientation="horizontal"
    	android:background="#848484">
    	        
        <Button
        	android:id="@+id/btnStartTest"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:text="@string/startTest"/>
            
         <Button
        	android:id="@+id/btnStopTest"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"   
        	android:text="@string/stopTest"/>
         
         <Button
        	android:id="@+id/btnUpload"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"   
        	android:text="@string/upload"/>
         
         <Button
        	android:id="@+id/btnViewUploadRecode"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"   
        	android:text="@string/viewUploadRecode"/>
        
    </LinearLayout>
        
</LinearLayout>
